Updates to INI variables

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -1,19 +1,67 @@
 # Variables used to define Phoenix Resource Locations
 # Used by Build scripts to create needed files in expected locations
 
+###########################################
+##
+##  Common Variables
+##
+###########################################
+
 PATH_TO_REPO=/home/jkeats/git_repositories/jetstream_resources
-
 CREATOR=jkeats
-
 PARENT_DIR=/scratch/jkeats/homo_sapiens/grch38_hg38
 TOPLEVEL_DIR=/scratch/jkeats/homo_sapiens/grch38_hg38/hg38tgen
 
-# Gene Model Information
-GENE_MODEL_NAME=ensembl_v95
-GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-95/gtf/homo_sapiens/Homo_sapiens.GRCh38.95.gtf.gz
+###########################################
+##
+##  Reference Genome Index Variables
+##
+###########################################
 
+SAMTOOLS_VERSION="1.9"
+# Created during reference genome creations process
+REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
+
+###########################################
+##
+##  BWA Index Variables
+##
+###########################################
+
+BWA_VERSION="0.7.17"
+
+###########################################
+##
+##  Gene Model Variables
+##
+###########################################
+
+GENE_MODEL_NAME=ensembl_v97
+GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-95/gtf/homo_sapiens/Homo_sapiens.GRCh38.97.gtf.gz
+
+# Created during gene model creation process
+GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v97/Homo_sapiens.GRCh38.97.ucsc.transcriptome.fasta
+
+###########################################
+##
+##  STAR Index Variables, some created by previous steps
+##
+###########################################
+
+STAR_VERSION=a
+STAR_GENOME=/scratch/jkeats/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
+STAR_GTF=/scratch/jkeats/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v97/Homo_sapiens.GRCh38.97.ucsc.gtf
+
+###########################################
+##
+##  Salmon Index Variables, some created by previous steps
+##
+###########################################
+
+SALMON_VERSION=x
 
 # Variant Annotation Databases
 DBSNP=text.txt
 
-REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
+
+
