--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -48,7 +48,7 @@ GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/g
 ##
 ###########################################
 
-STAR_VERSION=a
+STAR_VERSION="2.7.1a"
 STAR_GENOME=/scratch/jkeats/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
 STAR_GTF=/scratch/jkeats/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v97/Homo_sapiens.GRCh38.97.ucsc.gtf
 
@@ -58,7 +58,7 @@ STAR_GTF=/scratch/jkeats/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v9
 ##
 ###########################################
 
-SALMON_VERSION=x
+SALMON_VERSION="0.14.1"
 
 # Variant Annotation Databases
 DBSNP=text.txt
