updates to support refflat and rna interval file creation

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -21,6 +21,8 @@ TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen
 SAMTOOLS_VERSION="1.9"
 # Created during reference genome creations process
 REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
+REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
+
 
 ###########################################
 ##
@@ -38,6 +40,7 @@ BWA_VERSION="0.7.17"
 
 GENE_MODEL_NAME=ensembl_v97
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-97/gtf/homo_sapiens/Homo_sapiens.GRCh38.97.gtf.gz
+GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred
 
 # Created during gene model creation process
 GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v97/Homo_sapiens.GRCh38.97.ucsc.transcriptome.fasta
