--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -2,9 +2,7 @@
 # Used by Build scripts to create needed files in expected locations
 
 ###########################################
-##
 ##  Common Variables
-##
 ###########################################
 
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
@@ -13,29 +11,24 @@ PARENT_DIR=/home/tgenref/homo_sapiens/grch38_hg38
 TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen
 
 ###########################################
-##
 ##  Reference Genome Index Variables
-##
 ###########################################
 
 SAMTOOLS_VERSION="1.9"
 # Created during reference genome creations process
+REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/
 REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
 REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
 
 
 ###########################################
-##
 ##  BWA Index Variables
-##
 ###########################################
 
 BWA_VERSION="0.7.17"
 
 ###########################################
-##
 ##  Gene Model Variables
-##
 ###########################################
 
 GENE_MODEL_NAME=ensembl_v97
@@ -43,25 +36,28 @@ GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-97/gtf/homo_sapiens/H
 GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 
 # Created during gene model creation process
+GENE_MODEL_GTF=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v97/Homo_sapiens.GRCh38.97.ucsc.gtf
 GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v97/Homo_sapiens.GRCh38.97.ucsc.transcriptome.fasta
 
 ###########################################
-##
 ##  STAR Index Variables, some created by previous steps
-##
 ###########################################
 
 STAR_VERSION="2.7.1a"
-STAR_GENOME=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
-STAR_GTF=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v97/Homo_sapiens.GRCh38.97.ucsc.gtf
 
 ###########################################
-##
 ##  Salmon Index Variables, some created by previous steps
-##
 ###########################################
 
 SALMON_VERSION="0.14.1"
+
+###########################################
+##  snpEff Custom Database Variables, some created by previous steps
+###########################################
+
+SNPEFF_VERSION="v4_3t"
+SNPEFF_DB_NAME=grch38.97
+
 
 # Variant Annotation Databases
 DBSNP=text.txt
