adding VEP database download and configuration code

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -58,9 +58,11 @@ SALMON_VERSION="0.14.1"
 SNPEFF_VERSION="v4_3t"
 SNPEFF_DB_NAME=grch38.98
 
+###########################################
+##  VEP Database Variables
+###########################################
+ENSEMBL_VERSION="98"
 
-# Variant Annotation Databases
-DBSNP=text.txt
 
 
 
