cellranger package creation utility addition

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -63,6 +63,8 @@ SNPEFF_DB_NAME=grch38.98
 ###########################################
 ENSEMBL_VERSION="98"
 
-
-
+###########################################
+##  Cell Ranger Variables
+###########################################
+CELLRANGER_VERSION="3.1.0"
 
