--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -17,6 +17,7 @@ TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen
 SAMTOOLS_VERSION="1.9"
 # Created during reference genome creations process
 REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
+REFERENCE_DNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.dict
 REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
 REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
 
