updates for exome capture resources, adding INI variable for genome_subversion_name and output prefix to files created

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -9,6 +9,7 @@ PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
 CREATOR=jkeats
 PARENT_DIR=/home/tgenref/homo_sapiens/grch38_hg38
 TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen
+GENOME_SUBVERSION_NAME=hg38tgen
 
 ###########################################
 ##  Reference Genome Index Variables
