fixing variable to not include .dict as it is added programatically by make_exome_refpack.py

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -18,7 +18,7 @@ GENOME_SUBVERSION_NAME=hg38tgen
 SAMTOOLS_VERSION="1.9"
 # Created during reference genome creations process
 REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
-REFERENCE_DNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.dict
+REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla
 REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
 REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
 
