--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -48,6 +48,15 @@ GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/g
 STAR_VERSION="2.7.3a"
 
 ###########################################
+##  STAR-Fusion resources
+###########################################
+
+# This one is a bit tricky as we use public resources that match our annotations
+STARFUSION_PnP_DOWNLOAD_LINK=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.plug-n-play.tar.gz
+STARFUSION_PnP_MD5_DOWNLOAD_LINK=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.plug-n-play.tar.gz.md5sum
+STARFUSION_PnP_ANNOTATION_VERSION=gencode_v32
+
+###########################################
 ##  Salmon Index Variables, some created by previous steps
 ###########################################
 
