update module load for samtools to be dynamic

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -18,7 +18,7 @@ TOPLEVEL_DIR=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen
 ##  Required Modules (Or available in your $PATH
 ###########################################
 
-SAMTOOLS_VERSION="1.10-GCC-8.2.0-2.31.1"
+SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
 
 ###########################################
 ##  Reference Genome Index Variables
