minor updates for coyote

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -12,13 +12,13 @@ CREATOR=jkeats
 PARENT_DIR=/home/tgenref/canis_familiaris/canfam3.1
 TOPLEVEL_DIR=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen
 
-
-
 ###########################################
 ##  Required Modules (Or available in your $PATH
 ###########################################
 
 SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
+BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
+BWA_VERSION="0.7.17"
 
 ###########################################
 ##  Reference Genome Index Variables
@@ -41,7 +41,7 @@ REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome
 ##  BWA Index Variables
 ###########################################
 
-BWA_VERSION="0.7.17"
+
 
 ###########################################
 ##  Gene Model Variables
