changing to 1000G from ensembl as ncbi file has a decompression garbage warning

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -24,8 +24,8 @@ BWA_VERSION="0.7.17"
 ##  Reference Genome Index Variables
 ###########################################
 
-GENOME_SOURCE=ncbi
-GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp-trace.ncbi.nih.gov/1000genomes/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz
+GENOME_SOURCE=1000G
+GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz
 GENOME_FASTA_MD5_DOWNLOAD_LINK=NA
 GENOME_ASSEMBLY_NAME=GRCh37
 GENOME_SUBVERSION_NAME=hs37d5_suncity
