--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -49,7 +49,9 @@ REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome
 
 GENEMODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v98
-GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/homo_sapiens/Homo_sapiens.GRCh38.98.gtf.gz
+GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/Canis_familiaris.CanFam3.1.98.gtf.gz
+GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/CHECKSUMS
+
 GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 
 # Created during gene model creation process
