adding full support for GTF creation with shared script

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -13,12 +13,15 @@ PARENT_DIR=/home/tgenref/canis_familiaris/canfam3.1
 TOPLEVEL_DIR=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen
 
 ###########################################
-##  Required Modules (Or available in your $PATH
+##  Required Modules or Binaries (Or available in your $PATH)
 ###########################################
 
 SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
 BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
+
+# This is a hard link to the binary, putting it in your $PATH will fail with existing code
+GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 
 ###########################################
 ##  Reference Genome Index Variables
@@ -30,18 +33,11 @@ GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/fasta/canis_
 GENOME_ASSEMBLY_NAME=canfam3.1
 GENOME_SUBVERSION_NAME=canfam3.1_tgen
 
-# Created during reference genome creations process
-REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
-REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla
-REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
-REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
-
-
 ###########################################
 ##  BWA Index Variables
 ###########################################
 
-
+# See BWA version above
 
 ###########################################
 ##  Gene Model Variables
@@ -51,12 +47,6 @@ GENEMODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v98
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/Canis_familiaris.CanFam3.1.98.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_familiaris/CHECKSUMS
-
-GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
-
-# Created during gene model creation process
-GENE_MODEL_GTF=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.gtf
-GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.transcriptome.fasta
 
 ###########################################
 ##  STAR Index Variables, some created by previous steps
