updated to support GTF download

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -20,22 +20,19 @@ SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
 BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
 
+# This is a hard link to the binary, putting it in your $PATH will fail with existing code
+GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
+
 ###########################################
 ##  Reference Genome Index Variables
 ###########################################
 
 GENOME_SOURCE=1000G
+# Downloaded from this location as there was a decompression error warning on the version from NCBI
 GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.1000genomes.ebi.ac.uk/vol1/ftp/technical/reference/phase2_reference_assembly_sequence/hs37d5.fa.gz
 GENOME_FASTA_MD5_DOWNLOAD_LINK=NA
 GENOME_ASSEMBLY_NAME=GRCh37
 GENOME_SUBVERSION_NAME=hs37d5_suncity
-
-# Created during reference genome creations process
-REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
-REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla
-REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
-REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
-
 
 ###########################################
 ##  BWA Index Variables
@@ -48,13 +45,9 @@ REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome
 ###########################################
 
 GENEMODEL_SOURCE=ensembl
-GENE_MODEL_NAME=ensembl_v98
-GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/homo_sapiens/Homo_sapiens.GRCh38.98.gtf.gz
-GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
-
-# Created during gene model creation process
-GENE_MODEL_GTF=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.gtf
-GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.transcriptome.fasta
+GENE_MODEL_NAME=ensembl_v87
+GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/Homo_sapiens.GRCh37.87.gtf.gz
+GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/CHECKSUMS
 
 ###########################################
 ##  STAR Index Variables, some created by previous steps
