adding dynamic snpEff db creation

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -65,7 +65,7 @@ SALMON_VERSION="0.14.1"
 ###########################################
 
 SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=grch38.98
+SNPEFF_DB_NAME=canfam3.98
 
 ###########################################
 ##  VEP Database Variables
