--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -66,7 +66,7 @@ SALMON_VERSION="0.14.1"
 ###########################################
 
 SNPEFF_VERSION="v4_3t"
-SNPEFF_DB_NAME=grch38.98
+SNPEFF_DB_NAME=hs37d5.87
 
 ###########################################
 ##  VEP Database Variables
