adding support for VEP dynamic addition

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -70,9 +70,13 @@ SNPEFF_DB_NAME=canfam3.98
 ###########################################
 ##  VEP Database Variables
 ###########################################
+
 ENSEMBL_VERSION="98"
+VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/canis_familiaris_vep_98_CanFam3.1.tar.gz
+VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
 
 ###########################################
 ##  Cell Ranger Variables
 ###########################################
+
 CELLRANGER_VERSION="3.1.0"
