--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -71,9 +71,9 @@ SNPEFF_DB_NAME=hs37d5.87
 ###########################################
 ##  VEP Database Variables
 ###########################################
-ENSEMBL_VERSION="98"
-ftp://ftp.ensembl.org/pub/release-98/variation/vep/homo_sapiens_vep_98_GRCh37.tar.gz
-ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
+
+VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/homo_sapiens_vep_98_GRCh37.tar.gz
+VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
 
 ###########################################
 ##  Cell Ranger Variables
