suncity specific download of gnomAD r2.1.1 on GRCh37 coordinates and processing for Mutect2 needs

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -72,10 +72,24 @@ SNPEFF_DB_NAME=hs37d5.87
 ##  VEP Database Variables
 ###########################################
 
+# Need to check but this should be ensembl 87 release on GRCh37 coordinates but compatible with VEP v98
 VEP_CACHE_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/homo_sapiens_vep_98_GRCh37.tar.gz
 VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/CHECKSUMS
 
 ###########################################
 ##  Cell Ranger Variables
 ###########################################
+
 CELLRANGER_VERSION="3.1.0"
+
+###########################################
+##  gnomAD Database Variables
+###########################################
+
+GNOMAD_RELEASE_VERSION=r2.1.1
+
+GNOMAD_EXOME_DOWNLOAD_LINK=https://storage.googleapis.com/gnomad-public/release/2.1.1/vcf/exomes/gnomad.exomes.r2.1.1.sites.vcf.bgz
+GNOMAD_EXOME_DOWNLOAD_MD5SUM=f034173bf6e57fbb5e8ce680e95134f2
+
+GNOMAD_GENOME_DOWNLOAD_LINK=https://storage.googleapis.com/gnomad-public/release/2.1.1/vcf/genomes/gnomad.genomes.r2.1.1.sites.vcf.bgz
+GNOMAD_GENOME_DOWNLOAD_MD5SUM=e6eadf5ac7b2821b40f350da6e1279a2
