Added annotation db links
Added DogSD db link (directory) - No checksums available
Added OMIA annotation link - No checksums *HTTP(S) RESOURCE ONLY
Added EVA data links - Formerly dbSNP data, transferred to EVA
FTP's contain readme's

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -80,3 +80,22 @@ VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/C
 ###########################################
 
 CELLRANGER_VERSION="3.1.0"
+
+###########################################
+##  DogSD Canine SNP Database
+###########################################
+
+SNP_FILE_DOWNLOAD_LINK=ftp://download.big.ac.cn/dogsd/snp/
+
+###########################################
+##  OMIA Online Mendelian Inheritance in Animals, HTTP resource only
+###########################################
+
+XML_FILE_DOWNLOAD_LINK=https://omia.org/dumps/omia.xml.gz
+
+###########################################
+##  EVA (European Variation Archive), formerly dbSNP data
+###########################################
+
+SNP_VCF_FILE_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/eva/rs_releases/release_1/by_species/Dog_9615/CanFam3.1/GCA_000002285.2_current_ids.vcf.gz
+SNP_VCF_MD5SUM_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/eva/rs_releases/release_1/by_species/Dog_9615/CanFam3.1/md5checksums.txt
