added GATK module variable

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -19,6 +19,7 @@ TOPLEVEL_DIR=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen
 SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
 BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
+GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
 
 # This is a hard link to the binary, putting it in your $PATH will fail with existing code
 GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
