--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -19,6 +19,7 @@ TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity
 SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
 BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
+GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
 
 # This is a hard link to the binary, putting it in your $PATH will fail with existing code
 GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
@@ -81,6 +82,15 @@ VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/C
 ###########################################
 
 CELLRANGER_VERSION="3.1.0"
+
+###########################################
+##  dbSNP Database Variables
+###########################################
+
+DBSNP_RELEASE_VERSION=b153
+
+DBSNP_DOWNLOAD_LINK=ftp://ftp.ncbi.nih.gov/snp/redesign/latest_release/VCF/GCF_000001405.25.gz
+DBSNP_DOWNLOAD_MD5SUM_LINK=ftp://ftp.ncbi.nih.gov/snp/redesign/latest_release/VCF/GCF_000001405.25.gz.md5
 
 ###########################################
 ##  gnomAD Database Variables
