--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -30,6 +30,13 @@ REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome
 BWA_VERSION="0.7.17"
 
 ###########################################
+##  Bowtie2 Index Variables
+###########################################
+
+BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
+BOWTIE2_VERSION="2.3.5.1"
+
+###########################################
 ##  Gene Model Variables
 ###########################################
 
