--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -16,10 +16,12 @@ TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity
 ##  Required Modules (Or available in your $PATH
 ###########################################
 
-SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
+BOWTIE2_MODULE="Bowtie2/2.3.5.1-GCC-8.2.0-2.31.1"
+BOWTIE2_VERSION="2.3.5.1"
 BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
 GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
+SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
 
 # This is a hard link to the binary, putting it in your $PATH will fail with existing code
 GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
