adding workflow name variable required for newer build scripts

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -5,6 +5,7 @@
 ##  Common Variables
 ###########################################
 
+WORKFLOW_NAME=phoenix
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
 CREATOR=jkeats
 PARENT_DIR=/home/tgenref/homo_sapiens/grch38_hg38
