--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -89,7 +89,10 @@ CELLRANGER_VERSION="3.1.0"
 ##  dbSNP Database Variables
 ###########################################
 
-DBSNP_RELEASE_VERSION=b153
+DBSNP_RELEASE_VERSION=b138
+BROAD_BUNDLE_DBSNP_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/dbsnp_138.b37.vcf.gz
+BROAD_BUNDLE_DBSNP_DOWNLOAD_MD5SUM_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/dbsnp_138.b37.vcf.gz.md5
+
 
 DBSNP_DOWNLOAD_LINK=ftp://ftp.ncbi.nih.gov/snp/redesign/latest_release/VCF/GCF_000001405.25.gz
 DBSNP_DOWNLOAD_MD5SUM_LINK=ftp://ftp.ncbi.nih.gov/snp/redesign/latest_release/VCF/GCF_000001405.25.gz.md5
