Added BWA Index Variables

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -41,7 +41,8 @@ GENOME_SUBVERSION_NAME=hs37d5_suncity
 ##  BWA Index Variables
 ###########################################
 
-
+REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity/genome_reference/hs37d5.fa
+REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity/genome_reference/hs37d5
 
 ###########################################
 ##  Gene Model Variables
