Added gatk_cnv interval_list creation script. Required minor edits to the ini files.

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -87,3 +87,8 @@ ENSEMBL_VERSION="98"
 ###########################################
 CELLRANGER_VERSION="3.1.0"
 
+###########################################
+##  GATK CNV Variables
+###########################################
+GENOME_BUILD="Homo_sapiens.GRCh38"
+LAST_PRIMARY_CONTIG="chrY"
