--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -109,3 +109,9 @@ GNOMAD_EXOME_DOWNLOAD_MD5SUM=f034173bf6e57fbb5e8ce680e95134f2
 
 GNOMAD_GENOME_DOWNLOAD_LINK=https://storage.googleapis.com/gnomad-public/release/2.1.1/vcf/genomes/gnomad.genomes.r2.1.1.sites.vcf.bgz
 GNOMAD_GENOME_DOWNLOAD_MD5SUM=e6eadf5ac7b2821b40f350da6e1279a2
+
+###########################################
+##  GATK CNV Variables
+###########################################
+GENOME_BUILD="Homo_sapiens.GRCh37"
+LAST_PRIMARY_CONTIG="Y"
