Added required variables for deepvariant model creation (only requires the deepvariant version)

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -92,3 +92,8 @@ CELLRANGER_VERSION="3.1.0"
 ###########################################
 GENOME_BUILD="Homo_sapiens.GRCh38"
 LAST_PRIMARY_CONTIG="chrY"
+
+###########################################
+##  Deepvariant Variables
+###########################################
+DEEPVARIANT_VERSION="v0.9.0"
