--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -115,3 +115,8 @@ GNOMAD_GENOME_DOWNLOAD_MD5SUM=e6eadf5ac7b2821b40f350da6e1279a2
 ###########################################
 GENOME_BUILD="Homo_sapiens.GRCh37"
 LAST_PRIMARY_CONTIG="Y"
+
+###########################################
+##  Deepvariant Variables
+###########################################
+DEEPVARIANT_VERSION="v0.9.0"
