More updates for creating the index for these files, also we were downloading the wrong file before for 1000G_phase1

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -129,7 +129,7 @@ BROAD_BUNDLE_HAPMAP_DOWNLOAD_MD5SUM_LINK=ftp://gsapubftp-anonymous@ftp.broadinst
 BROAD_BUNDLE_MILLS_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/Mills_and_1000G_gold_standard.indels.b37.vcf.gz
 BROAD_BUNDLE_MILLS_MD5SUM_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/Mills_and_1000G_gold_standard.indels.b37.vcf.gz.md5
 
-BROAD_BUNDLE_1000G_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/1000G_phase1.indels.b37.vcf.idx.gz
-BROAD_BUNDLE_1000G_DOWNLOAD_MD5SUM_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/1000G_phase1.indels.b37.vcf.idx.gz.md5
+BROAD_BUNDLE_1000G_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/1000G_phase1.indels.b37.vcf.gz
+BROAD_BUNDLE_1000G_DOWNLOAD_MD5SUM_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/1000G_phase1.indels.b37.vcf.gz.md5
 
 BROAD_BUNDLE_1000Gphase3_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/1000G_phase3_v4_20130502.sites.vcf.gz
