Added script for creating snp database files for coyote

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -88,7 +88,8 @@ CELLRANGER_VERSION="3.1.0"
 ##  DogSD Canine SNP Database
 ###########################################
 
-SNP_FILE_DOWNLOAD_LINK=ftp://download.big.ac.cn/dogsd/snp/
+SNP_FILE_DOWNLOAD_LINK=ftp://download.big.ac.cn/idog/dogsd/vcf/Filtred_Published.vcf.bz2
+SNP_FILE_MD5SUM_DOWNLOAD_LINK=ftp://download.big.ac.cn/idog/dogsd/vcf/md5.txt
 
 ###########################################
 ##  OMIA Online Mendelian Inheritance in Animals, HTTP resource only
