Added script for creating the samtools stats non N region file

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -35,6 +35,8 @@ GENOME_FASTA_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/fasta/canis_fami
 GENOME_FASTA_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/fasta/canis_familiaris/dna/CHECKSUMS
 GENOME_ASSEMBLY_NAME=canfam3.1
 GENOME_SUBVERSION_NAME=canfam3.1_tgen
+REFERENCE_DNA_GENOME_FASTA=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen/genome_reference/Canis_familiaris.CanFam3.1.dna.toplevel.fa
+REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen/genome_reference/Canis_familiaris.CanFam3.1.dna.toplevel
 
 ###########################################
 ##  BWA Index Variables
