--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -87,6 +87,12 @@ VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/C
 CELLRANGER_VERSION="3.1.0"
 
 ###########################################
+##  Deepvariant Variables
+###########################################
+
+DEEPVARIANT_VERSION="0.9.0"
+
+###########################################
 ##  DogSD Canine SNP Database
 ###########################################
 
