--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -90,7 +90,7 @@ CELLRANGER_VERSION="3.1.0"
 ##  Deepvariant Variables
 ###########################################
 
-DEEPVARIANT_VERSION="0.9.0"
+DEEPVARIANT_VERSION="v0.9.0"
 
 ###########################################
 ##  DogSD Canine SNP Database
