added changes to support dynamic cosmic v90 creation

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -2,14 +2,24 @@
 # Used by Build scripts to create needed files in expected locations
 
 ###########################################
+## UPDATE THESE BASED ON YOUR LOCAL ENVIRONMENT
+###########################################
+
+PARENT_DIR=/home/tgenref/homo_sapiens/grch38_hg38
+TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen
+PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
+CREATOR=jkeats
+# To automate COSMIC download we use their token download but you must have a valid account (https://cancer.sanger.ac.uk/cosmic/login)
+# The associated script will ask for your password during execution
+COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
+ENVIRONMENT=TGen
+#ENVIRONMENT=LOCAL
+
+###########################################
 ##  Common Variables
 ###########################################
 
 WORKFLOW_NAME=phoenix
-PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
-CREATOR=jkeats
-PARENT_DIR=/home/tgenref/homo_sapiens/grch38_hg38
-TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen
 GENOME_SUBVERSION_NAME=hg38tgen
 
 ###########################################
@@ -17,6 +27,8 @@ GENOME_SUBVERSION_NAME=hg38tgen
 ###########################################
 
 SAMTOOLS_VERSION="1.9"
+
+REFERENCE_DNA_GENOME_NAME=GRCh38tgen_decoy_alts_hla.fa
 # Created during reference genome creations process
 REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
 REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla
@@ -97,3 +109,8 @@ LAST_PRIMARY_CONTIG="chrY"
 ##  Deepvariant Variables
 ###########################################
 DEEPVARIANT_VERSION="v0.9.0"
+
+###########################################
+##  COSMIC Variables
+###########################################
+COSMIC_VERSION="v90"
