added options needed for dynamic clinivar creation

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -111,6 +111,8 @@ LAST_PRIMARY_CONTIG="chrY"
 DEEPVARIANT_VERSION="v0.9.0"
 
 ###########################################
-##  COSMIC Variables
+##  PUBLIC DATABASE VARIABLES
 ###########################################
 COSMIC_VERSION="v90"
+DBSNP_VERSION="b152"
+CLINVAR_VERSION="20190715"
