--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -15,6 +15,11 @@ COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
 ENVIRONMENT=TGen
 #ENVIRONMENT=LOCAL
 
+# NCBI eUTILs PATH
+EUTILS_PATH=/home/jkeats/downloads/edirect/
+# JSON.awk
+JSON_AWK=/home/jkeats/downloads/JSON.awk-1.3/JSON.awk
+
 ###########################################
 ##  Common Variables
 ###########################################
@@ -28,6 +33,7 @@ GENOME_SUBVERSION_NAME=hg38tgen
 
 SAMTOOLS_VERSION="1.9"
 
+REFERENCE_DNA_BASE_DOWNLOAD=ftp://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/000/001/405/GCA_000001405.15_GRCh38/seqs_for_alignment_pipelines.ucsc_ids/GCA_000001405.15_GRCh38_full_plus_hs38d1_analysis_set.fna.gz
 REFERENCE_DNA_GENOME_NAME=GRCh38tgen_decoy_alts_hla.fa
 # Created during reference genome creations process
 REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
