--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -12,13 +12,19 @@ CREATOR=jkeats
 # To automate COSMIC download we use their token download but you must have a valid account (https://cancer.sanger.ac.uk/cosmic/login)
 # The associated script will ask for your password during execution
 COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
+
+# Set your enviroment variable (MUST BE ONE OF "TGen" or "LOCAL"
 ENVIRONMENT=TGen
 #ENVIRONMENT=LOCAL
+# Set the number of local compute cores to leverage threading options for some steps
+LOCAL_COMPUTE_CORES=20
 
 # NCBI eUTILs PATH
 EUTILS_PATH=/home/jkeats/downloads/edirect/
 # JSON.awk
 JSON_AWK=/home/jkeats/downloads/JSON.awk-1.3/JSON.awk
+# UCSC gtfToGenePred binary
+GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 
 ###########################################
 ##  Common Variables
@@ -35,10 +41,12 @@ SAMTOOLS_VERSION="1.9"
 
 REFERENCE_DNA_BASE_DOWNLOAD=ftp://ftp.ncbi.nlm.nih.gov/genomes/all/GCA/000/001/405/GCA_000001405.15_GRCh38/seqs_for_alignment_pipelines.ucsc_ids/GCA_000001405.15_GRCh38_full_plus_hs38d1_analysis_set.fna.gz
 REFERENCE_DNA_GENOME_NAME=GRCh38tgen_decoy_alts_hla.fa
+REFERENCE_RNA_GENOME_NAME=GRCh38tgen_decoy.fa
+
 # Created during reference genome creations process
 REFERENCE_DNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla.fa
 REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy_alts_hla
-REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
+#REFERENCE_RNA_GENOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.fa
 REFERENCE_RNA_GENOME_DICT=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/genome_reference/GRCh38tgen_decoy.dict
 
 
@@ -61,7 +69,9 @@ BOWTIE2_VERSION="2.3.5.1"
 
 GENE_MODEL_NAME=ensembl_v98
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/homo_sapiens/Homo_sapiens.GRCh38.98.gtf.gz
-GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
+# Final filename of manipulated gene model file
+GENE_MODEL_FILENAME=Homo_sapiens.GRCh38.98.ucsc.gtf
+
 
 # Created during gene model creation process
 GENE_MODEL_GTF=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.gtf
