updated to support dynamic salmon index creation

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -75,7 +75,7 @@ GENE_MODEL_FILENAME=Homo_sapiens.GRCh38.98.ucsc.gtf
 
 # Created during gene model creation process
 #GENE_MODEL_GTF=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.gtf
-GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.transcriptome.fasta
+#GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.transcriptome.fasta
 
 ###########################################
 ##  STAR Index Variables, some created by previous steps
