added snpEFF.jar path for local snpEff DB build

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -5,6 +5,11 @@
 ## UPDATE THESE BASED ON YOUR LOCAL ENVIRONMENT
 ###########################################
 
+# Set your environment variable (MUST BE ONE OF "TGen" or "LOCAL"
+ENVIRONMENT=TGen
+#ENVIRONMENT=LOCAL
+
+# Define input and output directories
 PARENT_DIR=/home/tgenref/homo_sapiens/grch38_hg38
 TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
@@ -13,12 +18,13 @@ CREATOR=jkeats
 # The associated script will ask for your password during execution
 COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
 
-# Set your enviroment variable (MUST BE ONE OF "TGen" or "LOCAL"
-ENVIRONMENT=TGen
-#ENVIRONMENT=LOCAL
+## WARNING!!!
+## PLEASE UPDATE THESE VARIABLES TO SUPPORT LOCAL BUILD
+
 # Set the number of local compute cores to leverage threading options for some steps
 LOCAL_COMPUTE_CORES=20
-
+# snpEff.jar
+SNPEFF=/packages/snpEff/snpEff_v4_3t_core/snpEff/snpEff.jar
 # NCBI eUTILs PATH
 EUTILS_PATH=/home/jkeats/downloads/edirect/
 # JSON.awk
