Updated star-fusion paths after Broad moved the location to subfolder

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -94,13 +94,13 @@ STAR_VERSION="2.7.3a"
 ###########################################
 
 # This one is a bit tricky as we use public resources that match our annotations
-STAR_FUSION_SOURCE=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/GRCh38_gencode_v32_CTAT_lib_Dec062019.source.tar.gz
-STAR_FUSION_SOURCE_MD5=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/GRCh38_gencode_v32_CTAT_lib_Dec062019.source.tar.gz.md5sum
+STAR_FUSION_SOURCE=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.source.tar.gz
+STAR_FUSION_SOURCE_MD5=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.source.tar.gz.md5sum
 STAR_FUSION_SOURCE_VERSION=gencode_v32
 
-STARFUSION_SOURCE_DOWNLOAD_LINK=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.plug-n-play.tar.gz
-STARFUSION_SOURCE_MD5_DOWNLOAD_LINK=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.plug-n-play.tar.gz.md5sum
-GENCODE_GTF_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_32/gencode.v32.annotation.gtf.gz
+#STARFUSION_SOURCE_DOWNLOAD_LINK=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.plug-n-play.tar.gz
+#STARFUSION_SOURCE_MD5_DOWNLOAD_LINK=https://data.broadinstitute.org/Trinity/CTAT_RESOURCE_LIB/__genome_libs_StarFv1.8/GRCh38_gencode_v32_CTAT_lib_Dec062019.plug-n-play.tar.gz.md5sum
+#GENCODE_GTF_DOWNLOAD_LINK=ftp://ftp.ebi.ac.uk/pub/databases/gencode/Gencode_human/release_32/gencode.v32.annotation.gtf.gz
 
 ###########################################
 ##  Salmon Index Variables, some created by previous steps
