updated for deepvariant build, doesn't need the leading "v", as the script fails otherwise

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -134,7 +134,7 @@ LAST_PRIMARY_CONTIG="chrY"
 ###########################################
 ##  Deepvariant Variables
 ###########################################
-DEEPVARIANT_VERSION="v0.9.0"
+DEEPVARIANT_VERSION="0.9.0"
 
 ###########################################
 ##  PUBLIC DATABASE VARIABLES
