--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -134,7 +134,8 @@ LAST_PRIMARY_CONTIG="chrY"
 ###########################################
 ##  Deepvariant Variables
 ###########################################
-DEEPVARIANT_VERSION="0.9.0"
+# Note: Download requires "v" but find step need "v" removed
+DEEPVARIANT_VERSION="v0.9.0"
 
 ###########################################
 ##  PUBLIC DATABASE VARIABLES
