--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -31,6 +31,8 @@ EUTILS_PATH=/home/jkeats/downloads/edirect/
 JSON_AWK=/home/jkeats/downloads/JSON.awk-1.3/JSON.awk
 # UCSC gtfToGenePred binary (http://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/gtfToGenePred)
 GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
+# faToTwoBit (rsync -aP rsync://hgdownload.soe.ucsc.edu/genome/admin/exe/linux.x86_64/faToTwoBit .)
+FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
 
 ###########################################
 ##  Common Variables
