--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -23,11 +23,11 @@ COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
 
 # Set the number of local compute cores to leverage threading options for some steps
 LOCAL_COMPUTE_CORES=20
-# snpEff.jar
+# snpEff.jar (https://sourceforge.net/projects/snpeff/files/snpEff_v4_3t_core.zip/download)
 SNPEFF=/packages/snpEff/snpEff_v4_3t_core/snpEff/snpEff.jar
-# NCBI eUTILs PATH
+# NCBI eUTILs PATH (https://www.ncbi.nlm.nih.gov/books/NBK179288/)
 EUTILS_PATH=/home/jkeats/downloads/edirect/
-# JSON.awk
+# JSON.awk (https://github.com/step-/JSON.awk/archive/1.3.tar.gz)
 JSON_AWK=/home/jkeats/downloads/JSON.awk-1.3/JSON.awk
 # UCSC gtfToGenePred binary (http://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/gtfToGenePred)
 GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
