updated to support snpSniffer file creation

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -121,6 +121,12 @@ LAST_PRIMARY_CONTIG="Y"
 DEEPVARIANT_VERSION="v0.9.0"
 
 ###########################################
+##  snpSniffer Variables
+###########################################
+POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/positions_387_hg19.txt
+DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/databaseV5.ini
+
+###########################################
 ##  Broad Resource Bundle Variables
 ###########################################
 BROAD_BUNDLE_HAPMAP_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/hapmap_3.3.b37.vcf.gz
