updated for snpSniffer file creation

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -123,8 +123,8 @@ DEEPVARIANT_VERSION="v0.9.0"
 ###########################################
 ##  snpSniffer Variables
 ###########################################
-POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/positions_387_hg19.txt
-DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/databaseV5.ini
+SNPSNIFFER_POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/positions_387_hg19.txt
+SNPSNIFFER_DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch37_hg19_default_contigs/databaseV5.ini
 
 ###########################################
 ##  Broad Resource Bundle Variables
