updated for snpSniffer file creation

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -142,8 +142,8 @@ DEEPVARIANT_VERSION="v0.9.0"
 ###########################################
 ##  snpSniffer Variables
 ###########################################
-POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch38_hg38_ucsc_contigs/positions_387_hg38_ucsc.txt
-DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch38_hg38_ucsc_contigs/databaseV5_hg38_ucsc.ini
+SNPSNIFFER_POSITION_TABLE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch38_hg38_ucsc_contigs/positions_387_hg38_ucsc.txt
+SNPSNIFFER_DATABASE=https://raw.githubusercontent.com/tgen/snpSniffer/master/grch38_hg38_ucsc_contigs/databaseV5_hg38_ucsc.ini
 
 ###########################################
 ##  PUBLIC DATABASE VARIABLES
