--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -87,6 +87,12 @@ VEP_CACHE_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/variation/vep/C
 CELLRANGER_VERSION="3.1.0"
 
 ###########################################
+##  GATK CNV Variables
+###########################################
+GENOME_BUILD="Canis_familiaris.CanFam3.1"
+LAST_PRIMARY_CONTIG="X"
+
+###########################################
 ##  Deepvariant Variables
 ###########################################
 
