Added creation of disease specific resources

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -86,6 +86,13 @@ GENE_MODEL_FILENAME=Homo_sapiens.GRCh38.98.ucsc.gtf
 #GENE_MODEL_TRANSCRIPTOME_FASTA=/home/tgenref/homo_sapiens/grch38_hg38/hg38tgen/gene_model/ensembl_v98/Homo_sapiens.GRCh38.98.ucsc.transcriptome.fasta
 
 ###########################################
+##  Disease Specific Variables
+###########################################
+
+DISEASE_NAME=myeloma
+DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/master/immunoglobulin_transcripts/Homo_sapiens_GRCh38_98_ucsc_ig_ENST_to_filter_out.tsv
+
+###########################################
 ##  STAR Index Variables, some created by previous steps
 ###########################################
 
