Updates for new Salmon version, added variability for type of index (puff is the only index available for 1.2.1 though)

--- a/phoenix/phoenix_resource.ini
+++ b/phoenix/phoenix_resource.ini
@@ -115,7 +115,8 @@ STAR_FUSION_SOURCE_VERSION=gencode_v32
 ##  Salmon Index Variables, some created by previous steps
 ###########################################
 
-SALMON_VERSION="0.14.1"
+SALMON_VERSION="1.2.1-gompi-2019a"
+SALMON_TYPE="puff"
 
 ###########################################
 ##  snpEff Custom Database Variables, some created by previous steps
