--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -2,15 +2,44 @@
 # Used by Build scripts to create needed files in expected locations
 
 ###########################################
+## UPDATE THESE BASED ON YOUR LOCAL ENVIRONMENT
+###########################################
+
+# Set your environment variable (MUST BE ONE OF "TGen" or "LOCAL"
+ENVIRONMENT=TGen
+#ENVIRONMENT=LOCAL
+
+# Define input and output directories
+PARENT_DIR=/home/tgenref/homo_sapiens/grch37_hg19
+TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity
+PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
+CREATOR=jkeats
+# To automate COSMIC download we use their token download but you must have a valid account (https://cancer.sanger.ac.uk/cosmic/login)
+# The associated script will ask for your password during execution
+COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
+
+## WARNING!!!
+## PLEASE UPDATE THESE VARIABLES TO SUPPORT LOCAL BUILD
+
+# Set the number of local compute cores to leverage threading options for some steps
+LOCAL_COMPUTE_CORES=20
+# snpEff.jar (https://sourceforge.net/projects/snpeff/files/snpEff_v4_3t_core.zip/download)
+SNPEFF=/packages/snpEff/snpEff_v4_3t_core/snpEff/snpEff.jar
+# NCBI eUTILs PATH (https://www.ncbi.nlm.nih.gov/books/NBK179288/)
+EUTILS_PATH=/home/jkeats/downloads/edirect/
+# JSON.awk (https://github.com/step-/JSON.awk/archive/1.3.tar.gz)
+JSON_AWK=/home/jkeats/downloads/JSON.awk-1.3/JSON.awk
+# UCSC gtfToGenePred binary (http://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/gtfToGenePred)
+GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
+# faToTwoBit (rsync -aP rsync://hgdownload.soe.ucsc.edu/genome/admin/exe/linux.x86_64/faToTwoBit .)
+FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
+
+###########################################
 ##  Common Variables
 ###########################################
 
 WORKFLOW_NAME=suncity
-SPECIES="Homo sapiens"
-PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
-CREATOR=jkeats
-PARENT_DIR=/home/tgenref/homo_sapiens/grch37_hg19
-TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity
+GENOME_SUBVERSION_NAME=hs37d5_suncity
 
 ###########################################
 ##  Required Modules (Or available in your $PATH
@@ -22,9 +51,6 @@ BWA_MODULE="BWA/0.7.17-GCC-8.2.0-2.31.1"
 BWA_VERSION="0.7.17"
 GATK_MODULE="GATK/4.1.4.0-GCCcore-8.2.0-Java-1.8-devel"
 SAMTOOLS_VERSION="SAMtools/1.10-GCC-8.2.0-2.31.1"
-
-# This is a hard link to the binary, putting it in your $PATH will fail with existing code
-GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
 
 ###########################################
 ##  Reference Genome Index Variables
@@ -48,22 +74,30 @@ REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_sunc
 ##  Gene Model Variables
 ###########################################
 
-GENEMODEL_SOURCE=ensembl
 GENE_MODEL_NAME=ensembl_v87
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/Homo_sapiens.GRCh37.87.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/CHECKSUMS
+GENE_MODEL_FILENAME=Homo_sapiens.GRCh37.87.ucsc.gtf
+
+###########################################
+##  Disease Specific Variables
+###########################################
+
+DISEASE_NAME=myeloma
+DISEASE_RESOURCE_FILE=https://raw.githubusercontent.com/tgen/MMRF_CoMMpass/master/immunoglobulin_transcripts/Homo_sapiens_GRCh37_74_ig_ENST_to_filter_out.tsv
 
 ###########################################
 ##  STAR Index Variables, some created by previous steps
 ###########################################
 
-STAR_VERSION="2.7.3a"
+STAR_VERSION="2.7.5a"
 
 ###########################################
 ##  Salmon Index Variables, some created by previous steps
 ###########################################
 
-SALMON_VERSION="0.14.1"
+SALMON_VERSION="1.2.1-gompi-2019a"
+SALMON_TYPE="puff"
 
 ###########################################
 ##  snpEff Custom Database Variables, some created by previous steps
@@ -118,7 +152,7 @@ LAST_PRIMARY_CONTIG="Y"
 ###########################################
 ##  Deepvariant Variables
 ###########################################
-DEEPVARIANT_VERSION="v0.9.0"
+DEEPVARIANT_VERSION="v0.10.0"
 
 ###########################################
 ##  snpSniffer Variables
