added way to create mappability file automatically

--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -139,3 +139,11 @@ BROAD_BUNDLE_1000G_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.or
 BROAD_BUNDLE_1000G_DOWNLOAD_MD5SUM_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/1000G_phase1.indels.b37.vcf.gz.md5
 
 BROAD_BUNDLE_1000Gphase3_DOWNLOAD_LINK=ftp://gsapubftp-anonymous@ftp.broadinstitute.org/bundle/b37/1000G_phase3_v4_20130502.sites.vcf.gz
+
+
+###########################################
+## Mappability Files - BISMAP - UMAP
+###########################################
+BISMAP_UMPA_DOWNLOAD_LINK=https://bismap.hoffmanlab.org/raw/hg19/k100.umap.bed.gz
+
+
