--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -1,5 +1,40 @@
 # Variables used to define Phoenix Resource Locations
 # Used by Build scripts to create needed files in expected locations
+###########################################
+## UPDATE THESE BASED ON YOUR LOCAL ENVIRONMENT
+###########################################
+
+# Set your environment variable (MUST BE ONE OF "TGen" or "LOCAL"
+ENVIRONMENT=TGen
+#ENVIRONMENT=LOCAL
+
+# Define input and output directories
+PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
+PARENT_DIR=/home/tgenref/homo_sapiens/grch37_hg19
+TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity
+CREATOR=jkeats
+
+# To automate COSMIC download we use their token download but you must have a valid account (https://cancer.sanger.ac.uk/cosmic/login)
+# The associated script will ask for your password during execution
+COSMIC_ACCOUNT_EMAIL=jkeats@tgen.org
+
+## WARNING!!!
+## PLEASE UPDATE THESE VARIABLES TO SUPPORT LOCAL BUILD
+
+# Set the number of local compute cores to leverage threading options for some steps
+LOCAL_COMPUTE_CORES=20
+# snpEff.jar (https://sourceforge.net/projects/snpeff/files/snpEff_v4_3t_core.zip/download)
+SNPEFF=/packages/snpEff/snpEff_v4_3t_core/snpEff/snpEff.jar
+# NCBI eUTILs PATH (https://www.ncbi.nlm.nih.gov/books/NBK179288/)
+EUTILS_PATH=/home/jkeats/downloads/edirect/
+# JSON.awk (https://github.com/step-/JSON.awk/archive/1.3.tar.gz)
+JSON_AWK=/home/jkeats/downloads/JSON.awk-1.3/JSON.awk
+# UCSC gtfToGenePred binary (http://hgdownload.cse.ucsc.edu/admin/exe/linux.x86_64/gtfToGenePred)
+GTFTOGENEPRED_BINARY=/home/tgenref/binaries/gtfToGenePred/gtfToGenePred
+# faToTwoBit (rsync -aP rsync://hgdownload.soe.ucsc.edu/genome/admin/exe/linux.x86_64/faToTwoBit .)
+FATOTWOBIT=/home/tgenref/binaries/faToTwoBit/faToTwoBit
+
+
 
 ###########################################
 ##  Common Variables
@@ -7,10 +42,6 @@
 
 WORKFLOW_NAME=suncity
 SPECIES="Homo sapiens"
-PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
-CREATOR=jkeats
-PARENT_DIR=/home/tgenref/homo_sapiens/grch37_hg19
-TOPLEVEL_DIR=/home/tgenref/homo_sapiens/grch37_hg19/hs37d5_suncity
 
 ###########################################
 ##  Required Modules (Or available in your $PATH
