--- a/suncity/suncity_resources.ini
+++ b/suncity/suncity_resources.ini
@@ -79,7 +79,7 @@ REFERENCE_RNA_GENOME_NAME=hs37d5.fa
 GENE_MODEL_NAME=ensembl_v87
 GENE_MODEL_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/Homo_sapiens.GRCh37.87.gtf.gz
 GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/grch37/current/gtf/homo_sapiens/CHECKSUMS
-GENE_MODEL_FILENAME=Homo_sapiens.GRCh37.87.ucsc.gtf
+GENE_MODEL_FILENAME=Homo_sapiens.GRCh37.87.gtf
 
 ###########################################
 ##  Disease Specific Variables
