Updates for supporting exome capture kit generation

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -57,13 +57,14 @@ GENE_MODEL_MD5_DOWNLOAD_LINK=ftp://ftp.ensembl.org/pub/release-98/gtf/canis_fami
 ##  STAR Index Variables, some created by previous steps
 ###########################################
 
-STAR_VERSION="2.7.3a"
+STAR_VERSION="2.7.5a"
 
 ###########################################
 ##  Salmon Index Variables, some created by previous steps
 ###########################################
 
-SALMON_VERSION="0.14.1"
+SALMON_VERSION="1.2.1-gompi-2019a"
+SALMON_TYPE="puff"
 
 ###########################################
 ##  snpEff Custom Database Variables, some created by previous steps
@@ -96,7 +97,7 @@ LAST_PRIMARY_CONTIG="X"
 ##  Deepvariant Variables
 ###########################################
 
-DEEPVARIANT_VERSION="0.9.0"
+DEEPVARIANT_VERSION="v0.10.0"
 
 ###########################################
 ##  DogSD Canine SNP Database
