Adding GENOME_NAME variables as they are used in salmon index generation

--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -37,6 +37,8 @@ GENOME_ASSEMBLY_NAME=canfam3.1
 GENOME_SUBVERSION_NAME=canfam3.1_tgen
 REFERENCE_DNA_GENOME_FASTA=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen/genome_reference/Canis_familiaris.CanFam3.1.dna.toplevel.fa
 REFERENCE_DNA_GENOME_BASENAME=/home/tgenref/canis_familiaris/canfam3.1/canfam3.1_tgen/genome_reference/Canis_familiaris.CanFam3.1.dna.toplevel
+REFERENCE_DNA_GENOME_NAME=Canis_familiaris.CanFam3.1.dna.toplevel.fa
+REFERENCE_RNA_GENOME_NAME=Canis_familiaris.CanFam3.1.dna.toplevel.fa
 
 ###########################################
 ##  BWA Index Variables
