--- a/coyote/coyote_resources.ini
+++ b/coyote/coyote_resources.ini
@@ -5,6 +5,8 @@
 ##  Common Variables
 ###########################################
 
+ENVIRONMENT=TGen
+
 WORKFLOW_NAME=coyote
 SPECIES="Canis familiaris"
 PATH_TO_REPO=/home/tgenjetstream/git_repositories/jetstream_resources
